CMF 2.1.0-beta2 (unreleased)

  New Features

    - Workflow definition instances now have a description field
      (http://www.zope.org/Collectors/CMF/480)

  Bug Fixes

    - CMFCore.CMFBTreeFolder: CMFBTreeFolders could not be used as the
      toplevel /Members container.
      (http://www.zope.org/Collectors/CMF/441)

    - Pass 'object' through to TypeInformation objects' 'listActions'.
      (http://www.zope.org/Collectors/CMF/482)
      
    - Removed extraneous "Cache" tab from FS-based skin objects.
      (http://www.zope.org/Collectors/CMF/343)

    - CMFCore.WorkflowTool: Using the '(Default)' keyword for a type's 
      workflow chain will now reset any custom workflow chains for the type.
      (http://www.zope.org/Collectors/CMF/475)

    - Use the property API to get the member specific skin, because
      direct attribute access won't work with PAS based membership.
      (http://dev.plone.org/plone/ticket/5904)

    - Add POST-only protections to security critical methods.
      http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240)

    - Allow customization from DirectoryViews to be redirected into
      alternate folders, and use manually-built clones.
      (http://www.zope.org/Collectors/CMF/382)

    - Use a utility, registered for
      'Products.CMFDefault.interfaces.IHTMLScrubber', to perform scrubbing
      of HTML;  fall back to the old, hard-wired behavior.
      (http://www.zope.org/Collectors/CMF/452)

    - Remove antique usage of marker attributes in favor of interfaces,
      leaving BBB behind for places potentially affecting third-party code.
      (http://www.zope.org/Collectors/CMF/440)

    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
      'zone' argument to the DublineCore methods which return string
      rednitions of date metadata.
     (http://www.zope.org/Collectors/CMF/476)

    - Favorite: Fixed UID handling broken in 2.1.0-beta.
